v0.0.5 fix-horizontal scrolling

--- a/assets/style/components/_car-buy.css
+++ b/assets/style/components/_car-buy.css
@@ -70,7 +70,7 @@
 
 @media (max-width: 895px) {
     .car-buy {
-        padding: 40px 0 0 0;
+        padding: 40px 16px 0 16px;
     }
 }
 
@@ -94,7 +94,7 @@
 
 @media (max-width: 580px) {
     .car-buy {
-        padding: 32px 0 0 0;
+        padding: 32px 16px 0 16px;
     }
 
     .car-buy__button {
